--- a/src/conponents/footer/styles.module.scss
+++ b/src/conponents/footer/styles.module.scss
@@ -45,6 +45,8 @@ footer {
 
             cursor: pointer;
 
+            text-decoration: none;
+
             &:hover {
               color: white;
             }
@@ -60,6 +62,8 @@ footer {
         > * {
           margin-bottom: 40px;
           color: #CAB28B;
+
+          text-decoration: none;
 
           font-family: Arial, sans-serif;
           font-style: normal;
