--- a/src/conponents/header/styles.module.scss
+++ b/src/conponents/header/styles.module.scss
@@ -22,7 +22,45 @@
     justify-content: space-between;
     align-items: center;
 
-    > div > a, > div > button {
+    .littleHeader {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+
+      .buttons {
+        .contacts {
+          margin-right: 10px;
+
+          width: 100px;
+          height: 30px;
+
+          font-family: Arial, sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 12px;
+          line-height: 14px;
+          text-align: center;
+          text-transform: uppercase;
+        }
+
+        .application {
+          width: 130px;
+          height: 30px;
+          padding: 0;
+
+          font-family: Arial, sans-serif;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 12px;
+          line-height: 14px;
+          text-align: center;
+          text-transform: uppercase;
+        }
+      }
+    }
+
+    > div > a, > div > button, .littleHeader > div > a, .littleHeader > div > button {
       text-decoration: none;
       color: white;
 
@@ -245,19 +283,35 @@
     .main {
       padding: 0 16px;
 
+      .iconWrapper {
+        display: flex;
+        padding: 50px 0 50px 0;
+      }
+
+      > h1 {
+        font-family: Arial, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        margin: 0;
+        padding-bottom: 15px;
+        color: white;
+      }
+
       .iconSmall {
-        padding-top: calc(50px - 16px);
-        padding-bottom: 25px;
+        margin-right: 10px;
       }
 
       .title {
-        margin-bottom: 25px;
+        margin: 0;
+        max-width: 262px;
 
         font-family: Arial, sans-serif;
         font-style: normal;
         font-weight: bold;
-        font-size: 30px;
-        line-height: 34px;
+        font-size: 26px;
+        line-height: 30px;
         text-transform: uppercase;
       }
 
@@ -329,7 +383,7 @@
     }
 
     &.opened {
-      >* {
+      > * {
         background: white;
       }
 
